--- a/conf/php.ini
+++ b/conf/php.ini
@@ -875,7 +875,8 @@ extension=redis.so
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
 ;extension=php_gd2.dll
-extension=php_gettext.so
+extension=gettext.so
+extension=libpng16.so
 ;extension=php_gmp.dll
 ;extension=php_intl.dll
 ;extension=php_imap.dll
