--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -49,7 +49,8 @@ ServerRoot "/app/apache/"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen ${PORT}
+#Listen ${PORT}
+Listen 127.0.0.1:5000
 
 ServerLimit 1
 MaxClients 1
