--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -49,8 +49,8 @@ ServerRoot "/app/apache/"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-#Listen ${PORT}
-Listen 127.0.0.1:5000
+Listen ${PORT}
+#Listen 127.0.0.1:5000
 
 ServerLimit 1
 MaxClients 1
@@ -199,7 +199,7 @@ ServerName 127.0.0.1
 # explicitly permit access to web content directories in other
 # <Directory> blocks below.
 #
-DocumentRoot "/app/www"
+DocumentRoot "public/"
 #
 <Directory />
     Options FollowSymLinks
@@ -220,7 +220,7 @@ DocumentRoot "/app/www"
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-<Directory "/app/www">
+<Directory "public/">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
