--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -183,7 +183,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin you@example.com
+ServerAdmin siim@greaton.ee
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -199,7 +199,7 @@ ServerName 127.0.0.1
 # explicitly permit access to web content directories in other
 # <Directory> blocks below.
 #
-DocumentRoot "public/"
+DocumentRoot "/public/"
 #
 <Directory />
     Options FollowSymLinks
@@ -220,7 +220,7 @@ DocumentRoot "public/"
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-<Directory "public/">
+<Directory "/public/">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
