--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -199,7 +199,7 @@ ServerName 127.0.0.1
 # explicitly permit access to web content directories in other
 # <Directory> blocks below.
 #
-DocumentRoot "/public/"
+DocumentRoot "/app/apache/htdocs/"
 #
 <Directory />
     Options FollowSymLinks
@@ -220,7 +220,7 @@ DocumentRoot "/public/"
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-<Directory "/public/">
+<Directory "/app/apache/htdocs/">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
